--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 
-.row > button {
+.row>button {
   margin-left: 4px;
   margin-right: 8px;
 }
@@ -15,6 +15,14 @@
 
 .value {
   font-size: 78px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-top: 2px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.boolValue {
+  font-size: 24px;
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 2px;
